--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -184,8 +184,6 @@
 
         @include mobileSize {
             min-height: 45rem;
-
-            overflow: unset;
             padding: 2rem;
         }
 
